fix: db connection
